--- a/answer1.html
+++ b/answer1.html
@@ -11,6 +11,6 @@
 <body>
     <h2>A dell</h2>
     <img src="images/adele.gif">
-    <p> back to <a href='animations.html'> home page</a> </p>
+    <p> back to <a href='index.html'> home page</a> </p>
 </body>
 </html>
