--- a/answer2.html
+++ b/answer2.html
@@ -11,6 +11,6 @@
 <body>
     <h2>They go out and grab a byte.</h2>
     <img src="images/200w.gif" width="500px">
-    <p> back to <a href='animations.html'> home page</a> </p>
+    <p> back to <a href='index.html'> home page</a> </p>
 </body>
 </html>
