--- a/answer3.html
+++ b/answer3.html
@@ -16,7 +16,7 @@
     <h2 class="animate__animated animate__flash" style="color: black"> Good night world!</h2>
     <hr>
     <img src="images/200.gif" width="500px">
-    <p> back to <a href='animations.html'> home page</a> </p>
+    <p> back to <a href='index.html'> home page</a> </p>
 
 
 </body>
