--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </button>
       </div>
     </nav>
-    <h1 class="animate__animated animate__bounce" style="color: white">
+    <h1 class="animate__animated animate__bounce" style="color: brown">
         gotjokes@cfh.com
       </h1>
         <p>jokes of the day</p>
